--- a/iSpyApplication/app.config
+++ b/iSpyApplication/app.config
@@ -100,7 +100,7 @@
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-1.2.11.0" newVersion="1.2.11.0" />
+                <bindingRedirect oldVersion="0.0.0.0-1.2.13.0" newVersion="1.2.13.0" />
             </dependentAssembly>
           <dependentAssembly>
                 <assemblyIdentity name="Microsoft.Threading.Tasks.Extensions.Desktop" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
@@ -109,6 +109,10 @@
             <dependentAssembly>
                 <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="AForge.Video" publicKeyToken="cbfb6e07d173c401" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-2.5.3.0" newVersion="2.5.3.0" />
             </dependentAssembly>
         </assemblyBinding>
         <loadFromRemoteSources enabled="true" />
